; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_macvtap.c_macvtap_dellink.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_macvtap.c_macvtap_dellink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.macvlan_dev = type { i32 }

@macvtap_class = common dso_local global i32 0, align 4
@macvtap_major = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @macvtap_dellink to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @macvtap_dellink(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.macvlan_dev*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call %struct.macvlan_dev* @netdev_priv(%struct.net_device* %4)
  store %struct.macvlan_dev* %5, %struct.macvlan_dev** %3, align 8
  %6 = load i32, i32* @macvtap_class, align 4
  %7 = load i32, i32* @macvtap_major, align 4
  %8 = call i32 @MAJOR(i32 %7)
  %9 = load %struct.macvlan_dev*, %struct.macvlan_dev** %3, align 8
  %10 = getelementptr inbounds %struct.macvlan_dev, %struct.macvlan_dev* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @MKDEV(i32 %8, i32 %11)
  %13 = call i32 @device_destroy(i32 %6, i32 %12)
  %14 = load %struct.net_device*, %struct.net_device** %2, align 8
  %15 = call i32 @macvtap_del_queues(%struct.net_device* %14)
  %16 = load %struct.net_device*, %struct.net_device** %2, align 8
  %17 = call i32 @macvlan_dellink(%struct.net_device* %16)
  %18 = load %struct.macvlan_dev*, %struct.macvlan_dev** %3, align 8
  %19 = call i32 @macvtap_free_minor(%struct.macvlan_dev* %18)
  ret void
}

declare dso_local %struct.macvlan_dev* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @device_destroy(i32, i32) #1

declare dso_local i32 @MKDEV(i32, i32) #1

declare dso_local i32 @MAJOR(i32) #1

declare dso_local i32 @macvtap_del_queues(%struct.net_device*) #1

declare dso_local i32 @macvlan_dellink(%struct.net_device*) #1

declare dso_local i32 @macvtap_free_minor(%struct.macvlan_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
